objects/Ruby__PricingPlugin__c/Ruby__PricingPlugin__c.object-meta.xml
<CustomObject>
    <description>Plugins for calculating prices</description>
    <label>Pricing Plugin</label>
    <nameField>
        <label>Pricing Plugin Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Plugins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>