objects/Ruby__PricingPlugin__c/fields/Ruby__Code__c.field-meta.xml
<CustomField>
    <fullName>Ruby__Code__c</fullName>
    <label>Code</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>