objects/Ruby__PricingPlugin__c/fields/Ruby__Description__c.field-meta.xml
<CustomField>
    <fullName>Ruby__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>