objects/Ruby__PricingPlugin__c/fields/Ruby__IsActive__c.field-meta.xml
<CustomField>
    <fullName>Ruby__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if the plugin is active</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>