objects/Ruby__PricingPlugin__c/fields/Ruby__TriggerEvent__c.field-meta.xml
<CustomField>
    <fullName>Ruby__TriggerEvent__c</fullName>
    <label>Trigger Event</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AfterCalculation</fullName>
                <label>After Calculation</label>
            </value>
            <value>
                <fullName>BeforeCalculation</fullName>
                <label>Before Calculation</label>
            </value>
            <value>
                <fullName>UI-AfterEdit</fullName>
                <label>After Edit on UI</label>
            </value>
            <value>
                <fullName>UI-AfterLoading</fullName>
                <label>After Loading Line Editor</label>
            </value>
            <value>
                <fullName>UI-AfterCalculation</fullName>
                <label>After Calculation on UI</label>
            </value>
            <value>
                <fullName>UI-BeforeCalculation</fullName>
                <label>Before Calculation on UI</label>
            </value>
            <value>
                <fullName>AfterRampGeneration</fullName>
                <label>After Ramp Generation</label>
            </value>
            <value>
                <fullName>AfterEdit</fullName>
                <label>After Edit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>