objects/Ruby__PricingPlugin__c/listViews/Ruby__All.listView-meta.xml
<ListView>
    <fullName>Ruby__All</fullName>
    <columns>NAME</columns>
    <columns>Ruby__IsActive__c</columns>
    <columns>Ruby__TriggerEvent__c</columns>
    <columns>Ruby__PluginType__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>